**Releases:


v7.x-3.3
---------
- Installscript adjusted for adding roles

v7.x-3.2
---------
- Catch empty variable settings

v7.x-3.1
---------
- Fix in admin menu
- Features disabled, changed to full module

v7.x-3.0
---------
- Uitbreiding Flitsbezoeken en Klasbezoeken

v7.x-2.0
---------
- Extra functionaliteiten toegevoegd: workload, plageuren

v7.x-1.0
---------
- First initial release - featured based


**Unreleased:
(check also forum, blog and projectstatus - issues and tickets)