@@ -2,12 +2,13 @@ name = HRM
 description = Voer een goed onderbouwd personeelsmanagement volgens de juiste procedures.
 core = 7.x
 package = argus - a Quality control extension
-version = 7.x-3.3
+version = 7.x-3.4
 project = argus_hrm
 files[] = argus_hrm.install
 files[] = argus_hrm.module
 files[] = css/argus_hrm.css
 files[] = templates/argus_hrm--overview_workload.tpl.php
+files[] = templates/argus_hrm--overview_pop.tpl.php
 dependencies[] = argus_engine
 dependencies[] = ctools
 dependencies[] = date
