@@ -1,6 +1,10 @@
 **Releases:
 
 
+v7.x-3.4
+---------
+- Added POP overview
+
 v7.x-3.3
 ---------
 - Installscript adjusted for adding roles
